--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,3 +1,6 @@
+# SPDX-License-Identifier: GPL-2.0-only
+# Copyright (c) 2022 Intel Corporation.
+
 FROM ubuntu:22.04
 
 ENV http_proxy=http://child-prc.intel.com:913
