shstk_unlock_test.c: add user space shstk unlock test
Add user space shstk unlock test:
1. Test user space shstk enabling by syscall
2. Fork child prcess and child process should enable shstk also
3. Unlock child process by ptrace from parent process.
4. Get/set shstk regset test
5. Finally disable shstk test

Signed-off-by: Pengfei Xu <pengfei.xu@intel.com>

--- a/cet/Makefile
+++ b/cet/Makefile
@@ -9,7 +9,8 @@ GCC_VER_MAJOR := $(shell gcc --version | grep gcc | cut -d . -f1 | awk '{print $
 GCC_GE_8 := $(shell [ $(GCC_VER_MAJOR) -ge 8 ] && echo true)
 
 ifeq ($(GCC_GE_8),true)
-BIN := shstk_alloc test_shadow_stack quick_test wrss shstk_huge_page
+BIN := shstk_alloc test_shadow_stack quick_test wrss shstk_huge_page \
+       shstk_unlock_test
 
 $(info GCC major version: ${GCC_VER_MAJOR})
 else
@@ -33,6 +34,9 @@ wrss: wrss.c
 
 shstk_huge_page: shstk_huge_page.c
 	gcc $(CETFLAGS) $^ -o $@
+
+shstk_unlock_test: shstk_unlock_test.c
+	gcc $(NOCETFLAGS) $^ -o $@
 
 clean:
 	rm -rf $(BIN)
