shstk_cp.c: add shstk violation test and it should trigger #CP as expected
Add shstk violation test code and use script to check whether it trigger #CP as
expected or not.

Signed-off-by: Pengfei Xu <pengfei.xu@intel.com>

--- a/cet/Makefile
+++ b/cet/Makefile
@@ -10,7 +10,7 @@ GCC_GE_8 := $(shell [ $(GCC_VER_MAJOR) -ge 8 ] && echo true)
 
 ifeq ($(GCC_GE_8),true)
 BIN := shstk_alloc test_shadow_stack quick_test wrss shstk_huge_page \
-       shstk_unlock_test
+       shstk_unlock_test shstk_cp
 
 $(info GCC major version: ${GCC_VER_MAJOR})
 else
@@ -36,6 +36,9 @@ shstk_huge_page: shstk_huge_page.c
 	gcc $(CETFLAGS) $^ -o $@
 
 shstk_unlock_test: shstk_unlock_test.c
+	gcc $(NOCETFLAGS) $^ -o $@
+
+shstk_cp: shstk_cp.c
 	gcc $(NOCETFLAGS) $^ -o $@
 
 clean:
