fix wrong path of pull request checking script
pr_check is put in /bin directory.
Refer to: https://github.com/hanning0511/lkvs-pr-check/blob/master/Dockerfile

Signed-off-by: Ning Han <ning.han@intel.com>

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -13,13 +13,12 @@ jobs:
     runs-on: ubuntu-latest
     container: hanning0511/lkvs-pr-check:latest
     steps:
-      - name: Clean Workspace
-        run: git submodule status || rm -rf "$GITHUB_WORKSPACE"/* "$GITHUB_WORKSPACE"/.gi*
       - name: Checkout Repository
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+        run: |
+          git pull "https://github.com/intel/lkvs" lkvs
       - name: Check Code
-        run: ./.github/scripts/pr_check origin/${{ github.base_ref }} ${{ github.sha }}
+        run: |
+          cd lkvs
+          pr_check origin/${{ github.base_ref }} ${{ github.sha }}
       - name: Report Job Status
         run: echo "Job's status is ${{ job.status }}."
