cet: Add 2 kernel space IBT test cases
Add 2 kernel space IBT test cases:
It will load cet_driver/cet_ioctl.ko module for kernel space IBT tests.
And use cet_app b1|b2 to do illegal indirect jump IBT and leagal indirect jump
IBT tests.

Reviewed-by: Yi Sun <yi.sun@intel.com>
Signed-off-by: Pengfei Xu <pengfei.xu@intel.com>

--- a/cet_driver/Makefile
+++ b/cet_driver/Makefile
@@ -3,7 +3,7 @@ ifeq ($(KERNELRELEASE),)
 
 	KERNEL_SOURCE := /usr/src/kernels/$(shell uname -r)
 	PWD := $(shell pwd)
-default: module cet_app
+default: cet_app module
 
 module:
 	$(MAKE) -C $(KERNEL_SOURCE) SUBDIRS=$(PWD) modules
