--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -10,7 +10,7 @@ RUN dpkg --add-architecture i386
 RUN dpkg --print-foreign-architectures
 RUN \
 	apt-get update && \
-	apt-get install gcc-11=11.2.0-19ubuntu1 make=4.3-4.1build1 libelf1  gcc-multilib g++-multilib git cmake -y --no-install-recommends && \
+	apt-get install gcc-11 make libelf1 gcc-multilib g++-multilib git cmake -y --no-install-recommends && \
 	apt-get clean && \
 	rm -rf /var/lib/apt/lists/*
 
