--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -6,15 +6,17 @@ FROM ubuntu:22.04
 ENV http_proxy=http://child-prc.intel.com:913
 ENV https_proxy=http://child-prc.intel.com:913
 
+COPY common/uname /usr/local/sbin/
+
 RUN dpkg --add-architecture i386
 RUN dpkg --print-foreign-architectures
 RUN \
 	apt-get update && \
-	apt-get install gcc-11 make libelf1 gcc-multilib g++-multilib git cmake -y --no-install-recommends && \
+	apt-get install gcc-11 make libelf1 gcc-multilib g++-multilib git cmake linux-headers-`uname -r` -y --no-install-recommends && \
 	apt-get clean && \
 	rm -rf /var/lib/apt/lists/*
 
-RUN export GIT_SSL_NO_VERIFY=true && git clone http://github.com/intel/libipt.git && \
+RUN export GIT_SSL_NO_VERIFY=true && rm -rf libipt && git clone http://github.com/intel/libipt.git && \
 	cd libipt && cmake . && make install
 
 RUN mkdir -p /src
