Kernel space IBT: add 2 kernel space IBT test cases
Add 2 kernel space IBT test cases:
It will load cet_driver/cet_ioctl.ko module for kernel space IBT tests.
1. "./cet_app b1" will execute illegal indirect jump IBT in kernel space and
   trigger "Missing ENDBR" BUG dmesg info and it means kernel IBT prevent the
   IBT violation as expected, and kernel space should not exist IBT violation
   and trigger "Missing ENDBR" issue, so kernel still reports this issue as BUG.
2. "./cet_app b2" will execute leagal indirect jump IBT in kernel space and
   should not trigger "Missing ENDBR" BUG dmesg info.

Signed-off-by: Pengfei Xu <pengfei.xu@intel.com>

--- a/cet/Makefile
+++ b/cet/Makefile
@@ -8,14 +8,24 @@ NOCETFLAGS := -O0 -fcf-protection=none -mshstk -fno-stack-check -fno-stack-prote
 GCC_VER_MAJOR := $(shell gcc --version | grep gcc | cut -d . -f1 | awk '{print $$NF}')
 GCC_GE_8 := $(shell [ $(GCC_VER_MAJOR) -ge 8 ] && echo true)
 
+KER_SRC = /lib/modules/$(shell uname -r)/build
+DRIVER_PATH = $(shell pwd)/cet_driver
+IS_KER_SRC = $(shell  [ -d $(KER_SRC) ] && echo true)
+
 ifeq ($(GCC_GE_8),true)
 BIN := shstk_alloc test_shadow_stack quick_test wrss shstk_huge_page \
-       shstk_unlock_test shstk_cp
+       shstk_unlock_test shstk_cp cet_app
 
 $(info GCC major version: ${GCC_VER_MAJOR})
 else
-$(info Warning: GCC major version ${GCC_VER_MAJOR}, older than GCC 8)
-$(info Warning: Could not handle CET related binary)
+$(info [WARN]: GCC major version ${GCC_VER_MAJOR}, older than GCC 8)
+$(info [WARN]: Could not handle CET related binary)
+endif
+
+ifeq ($(IS_KER_SRC),true)
+BIN += cet_ioctl
+else
+$(info [WARN]:No $(KER_SRC) folder, please install $(shell uname -r) devel and header package!)
 endif
 
 all: $(BIN)
@@ -41,5 +51,12 @@ shstk_unlock_test: shstk_unlock_test.c
 shstk_cp: shstk_cp.c
 	gcc $(NOCETFLAGS) $^ -o $@
 
+cet_app:
+	gcc cet_driver/cet_app.c -I cet_driver -o $@
+
+cet_ioctl:
+	$(MAKE) -C $(KER_SRC) M=$(DRIVER_PATH) modules
+
 clean:
 	rm -rf $(BIN)
+	$(MAKE) -C $(KER_SRC) M=$(DRIVER_PATH) clean
