.github: refine build check, check build warnings
Signed-off-by: Ning Han <ning.han@intel.com>

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -49,4 +49,4 @@ jobs:
       - name: Build Docker Image
         run: sudo docker build -f ./Dockerfile.build -t builder .
       - name: Build Project
-        run: sudo docker run -v `pwd`:/src builder make
+        run: sudo ./.github/scripts/build_check
