--- a/umip/Makefile
+++ b/umip/Makefile
@@ -1,7 +1,14 @@
 # SPDX-License-Identifier: GPL-2.0-only
 # Copyright (c) 2022 Intel Corporation.
 
-BIN := umip_exceptions_64 umip_exceptions_32
+BIN := umip_exceptions_64
+SUPPORT_GCC_32BIT = $(shell gcc -no-pie -c umip_utils.c -m32 -o umip_utils_32.o 2>/dev/null || echo false)
+
+ifeq ($(SUPPORT_GCC_32BIT),false)
+$(info Skip 32-bit compilation or clean due to lack of GCC support for 32-bit architecture.)
+else
+BIN += umip_exceptions_32
+endif
 
 all: $(BIN)
 
