cet/shstk_alloc.c: change test code to not require Glibc shstk dependencies
shstk_alloc will focus on the kernel shstk test and will not test Glibc SHSTK
part.

Signed-off-by: Pengfei Xu <pengfei.xu@intel.com>

--- a/cet/Makefile
+++ b/cet/Makefile
@@ -31,7 +31,7 @@ endif
 all: $(BIN)
 
 shstk_alloc: shstk_alloc.c
-	gcc $(CETFLAGS) $^ -o $@
+	gcc $(NOCETFLAGS) $^ -o $@
 
 test_shadow_stack: test_shadow_stack.c
 	gcc -pthread $(NOCETFLAGS) $^ -o $@
