[Case-Gen Tools] for tdx-compliance-tests
Please complete relevant configurations in config.json, and then just
run auto_gen.py

Signed-off-by: DCyan_Elite <dongcheng.yan@intel.com>

--- a/tdx-compliance/config.json
+++ b/tdx-compliance/config.json
@@ -1,12 +1,24 @@
 {
     "cpuid":{
-        "csv_path": "hh1_0.csv",
+
         "header_path": "cpuid_case.h",
-        "vdetail": ["Virtualization Details"],
-        "vtype": ["Bit or Field Virtualization Type", "Virtualization Type"],
         "fname": "Field Name",
-        "bias": "1",
-        "version": "1.0"
+        "spec_list": [
+            {
+                "csv_path": "cpuid1_0.csv",
+                "bias": "1",
+                "vtype": "Virtualization Type",
+                "vdetail": "Virtualization Details",
+                "version": "VER1_0"
+            },
+            {
+                "csv_path": "cpuid1_5.csv",
+                "bias": "2",
+                "vtype": "Bit or Field Virtualization Type",
+                "vdetail": "Virtualization Details",
+                "version": "VER1_5"
+            }
+        ]
     },
     "cr":{
         "csv_path": "",
@@ -16,10 +28,23 @@
         "bias": "2"
     },
     "msr":{
-        "csv_path": "",
+        "prepath": "pre_condition.json",
         "header_path": "msr_case.h",
-        "vdetail": "",
-        "vtype": "",
-        "bias": "2"
+        "spec_list": [
+            {
+                "csv_path": "msr1_0.csv",
+                "bias": "4",
+                "rdname": "On RDMSR",
+                "wrname": "On WRMSR",
+                "version": "VER1_0"
+            },
+            {
+                "csv_path": "msr1_5.csv",
+                "bias": "4",
+                "rdname": "On RDMSR",
+                "wrname": "On WRMSR",
+                "version": "VER1_5"
+            }
+        ]
     }
 }
