workload-xsave: Bug Fix 1. Supplement the detection of the SSE instruction set. Signed-off-by: Haoliang Zhu <haoliang.zhu@intel.com>

--- a/workload-xsave/CMakeLists.txt
+++ b/workload-xsave/CMakeLists.txt
@@ -71,7 +71,8 @@ endfunction()
 check_cpu_feature(FEATURE "-mamx-tile" COMPILE_DEFINITION "MAMX_ENABLED" SOURCES "work_AMX.c")
 check_cpu_feature(FEATURE "-mavx" COMPILE_DEFINITION "MAVX_ENABLED" SOURCES "work_AVX.c")
 check_cpu_feature(FEATURE "-mavx2" COMPILE_DEFINITION "MAVX2_ENABLED" SOURCES "work_AVX2.c" "work_DOTPROD.c")
-check_cpu_feature(FEATURE "-mavx512f" COMPILE_DEFINITION "MAVX512f_ENABLED" SOURCES "work_AVX512.c")
+check_cpu_feature(FEATURE "-mavx512f" COMPILE_DEFINITION "MAVX512F_ENABLED" SOURCES "work_AVX512.c")
+check_cpu_feature(FEATURE "-msse" COMPILE_DEFINITION "MSSE_ENABLED" SOURCES "work_SSE.c")
 check_cpu_feature(FEATURE "-mvnni" COMPILE_DEFINITION "MVNNI_ENABLED" SOURCES "work_VNNI.c")
 check_cpu_feature(FEATURE "-mvnni512" COMPILE_DEFINITION "MVNNSI512_ENABLED" SOURCES "work_VNNI512.c")
 
