add KVM test for lam and lass.

--- a/KVM/qemu/feature_test.cfg
+++ b/KVM/qemu/feature_test.cfg
@@ -10,6 +10,10 @@
     variants:
         - cmpccxadd:
             feature_dir_names = "cmpccxadd"
+        - lam:
+            feature_dir_names = "lam"
+        - lass:
+            feature_dir_names = "lass"
         - umip:
             feature_dir_names = "umip"
     variants:
