Update Intel PT testing by adding 11 cases
Add 4 perf related PT cases
Add 7 C program related PT cases

Signed-off-by: qwang59 <wendy.wang@intel.com>

--- a/pt/Makefile
+++ b/pt/Makefile
@@ -3,7 +3,7 @@
 
 CC       ?= "${CC}" -g -Wall
 CFLAGS += -DMAINLINE -I./
-BIN	 = cpl branch psb nonroot_test negative_test
+BIN	 = cpl branch psb nonroot_test negative_test sort_test
 LFLAGS	= -L./ -lipt
 
 
@@ -23,6 +23,9 @@ nonroot_test:
 	$(CC)	-o  $@ $@.c utils.c ${CFLAGS} ${LFLAGS}
 
 negative_test:
+	$(CC)	-o  $@ $@.c utils.c ${CFLAGS} ${LFLAGS}
+
+sort_test:
 	$(CC)	-o  $@ $@.c utils.c ${CFLAGS} ${LFLAGS}
 
 clean:
