add cpu info check for lam and lass.

--- a/KVM/qemu/x86_cpu_flags.cfg
+++ b/KVM/qemu/x86_cpu_flags.cfg
@@ -7,6 +7,21 @@
     auto_cpu_model = "no"
     cpu_model = host
     variants:
+        # SRF
+        - lam:
+            flags = "lam"
+            variants:
+                - default:
+                - disable:
+                    cpu_model_flags = ",-lam"
+                    no_flags = "lam"
+        - lass:
+            flags = "lass"
+            variants:
+                - default:
+                - disable:
+                    cpu_model_flags = ",-lass"
+                    no_flags = "lass"
         # SPR
         - avx512_fp16:
             flags = "avx512_fp16"
