--- a/KVM/qemu/x86_cpuid.cfg
+++ b/KVM/qemu/x86_cpuid.cfg
@@ -19,6 +19,10 @@
             features = "AVX_NE_CONVERT"
         - cmpccxadd:
             features = "CMPCCXADD"
+        - lam:
+            features = "LAM"
+        - lass:
+            features = "LASS"
         # GNR
         - amx_fp16:
             features = "AMX_FP16"
