[tdx-guest] Test Enhance: compile based on kernel header define
compile test source code based on kernel header tdx-guest.h define to
adapt to difference version of tdx guest kernel under test

[Test Components] tdx
[Test Types] func
[Supported Devices] spr,emr,gnr,srf

Signed-off-by: Hongyu Ning <hongyu.ning@intel.com>

--- a/tdx-guest/tdx_attest_test_suite/Makefile
+++ b/tdx-guest/tdx_attest_test_suite/Makefile
@@ -15,6 +15,45 @@ SOURCES := \
 
 MAKE_TARGETS            := tdx_guest_test
 
+SRC_INC := /usr/include/linux/tdx-guest.h
+
+# Check if TDX_CMD_GET_REPORT0 is defined in tdx-guest.h
+VERIFY_REPORT_DEFINED := $(shell grep -c "TDX_CMD_GET_REPORT0" $(SRC_INC))
+
+# Check if TDX_CMD_VERIFY_REPORT is defined in the source code
+VERIFY_REPORTMAC_DEFINED := $(shell grep -c "TDX_CMD_VERIFY_REPORT" $(SRC_INC))
+
+# Check if TDX_CMD_EXTEND_RTMR is defined in the source code
+VERIFY_RTMR_EXTEND_DEFINED := $(shell grep -c "TDX_CMD_EXTEND_RTMR" $(SRC_INC))
+
+# Check if TDX_CMD_GET_QUOTE is defined in the source code
+VERIFY_QUOTE_DEFINED := $(shell grep -c "TDX_CMD_GET_QUOTE" $(SRC_INC))
+
+
+# Conditional compilation based on whether TDX_CMD_GET_REPORT0 is defined
+ifneq ($(VERIFY_REPORT_DEFINED),0)
+    # enable compile macro in case of TDX_CMD_GET_REPORT0 is defined
+    CFLAGS += -DVERIFY_REPORT
+endif
+
+# Conditional compilation based on whether TDX_CMD_VERIFY_REPORT is defined
+ifneq ($(VERIFY_REPORTMAC_DEFINED),0)
+    # enable compile macro in case of TDX_CMD_VERIFY_REPORT is defined
+    CFLAGS += -DVERIFY_REPORTMAC
+endif
+
+# Conditional compilation based on whether TDX_CMD_EXTEND_RTMR is defined
+ifneq ($(VERIFY_RTMR_EXTEND_DEFINED),0)
+    # enable compile macro in case of TDX_CMD_EXTEND_RTMR is defined
+    CFLAGS += -DVERIFY_RTMR_EXTEND
+endif
+
+# Conditional compilation based on whether TDX_CMD_GET_QUOTE is defined
+ifneq ($(VERIFY_QUOTE_DEFINED),0)
+    # enable compile macro in case of TDX_CMD_GET_QUOTE is defined
+    CFLAGS += -DVERIFY_QUOTE
+endif
+
 tdx_guest_test:
 	$(CC) $(CFLAGS) $(LDFLAGS) -o ${MAKE_TARGETS} ${INCLUDES} ${SOURCES}
 
