--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -48,6 +48,6 @@ jobs:
         with:
           fetch-depth: 0
       - name: Build Docker Image
-        run: sudo docker build -f ./Dockerfile.build -t builder .
+        run: sudo docker build -f BM/Dockerfile.build -t builder BM
       - name: Build Project
         run: sudo ./.github/scripts/build_check
