cet: update ignore file
Signed-off-by: Pengfei Xu <pengfei.xu@intel.com>

--- a/BM/cet/.gitignore
+++ b/BM/cet/.gitignore
@@ -4,6 +4,8 @@ glibc_supported_shstk_test
 quick_test
 shstk_alloc
 shstk_cp
+shstk_cpu
+shstk_cpu_legacy
 shstk_huge_page
 shstk_unlock_test
 test_shadow_stack
