[BM] [amx] Test Enhance: add amx_fp16 test support based on gcc version
add amx_fp16 support based on gcc version, gcc 13.3 or higher will
include amx_fp16 test support, otherwise bypass it since gcc don't
support it likely and test code compile will fail

[Test Components] amx/tmul
[Test Types] any
[Supported Devices] all-generic

Signed-off-by: Hongyu Ning <hongyu.ning@intel.com>

--- a/BM/amx/tmul/Makefile
+++ b/BM/amx/tmul/Makefile
@@ -8,6 +8,9 @@ CFILES_AMX = tmul.c
 all:
 	$(CC) $(CFLAG) $(CFILES_AMX) -o $(BIN_AMX) $(LIBS)
 
+fp16: CFLAG += -g -DFP16
+fp16: all
+
 clean:
 	-rm $(BIN_AMX)
 
