Add one TDX test case by 4 VMs 20 times booting
Signed-off-by: Xudong Hao <xudong.hao@intel.com>

--- a/KVM/qemu/td_boot_multimes.cfg
+++ b/KVM/qemu/td_boot_multimes.cfg
@@ -22,3 +22,9 @@
         - two_socket:
             vcpu_sockets = 2
             no one_cpu
+        - 4vm_20times:
+            vms = "vm1 vm2 vm3 vm4"
+            image_snapshot = yes
+            mem = 16384
+            iterations = 20
+            only four_cpu
