Add 10 TDX cases and 4 Non-TDX test cases
2 VM co-existing with various vcpus and memory configure.

Signed-off-by: Xudong Hao <xudong.hao@intel.com>

--- a/KVM/qemu/multi_vms.cfg
+++ b/KVM/qemu/multi_vms.cfg
@@ -15,6 +15,56 @@
         - 2td:
             machine_type_extra_params = "kernel-irqchip=split"
             vm_secure_guest_type = tdx
+            variants:
+                - 2vcpu:
+                    smp = 2
+                - 4vcpu:
+                    smp = 4
+                - 8vcpu:
+                    smp = 8
+                - 2vcpu_4vcpu:
+                    smp_vm1 = 2
+                    smp_vm2 = 4
+                - 2vcpu_8vcpu:
+                    smp_vm1 = 2
+                    smp_vm2 = 8
+                - 4vcpu_8vcpu:
+                    smp_vm1 = 4
+                    smp_vm2 = 8
+                - 1G:
+                    mem = 1024
+                - 2G:
+                    mem = 2048
+                - 1G_2G:
+                    mem_vm1 = 1024
+                    mem_vm2 = 2048
+        - 4td:
+            machine_type_extra_params = "kernel-irqchip=split"
+            vm_secure_guest_type = tdx
+            vms = "vm1 vm2 vm3 vm4"
         - 2vm:
+            variants:
+                - 2vcpu:
+                    smp = 2
+                - 4vcpu:
+                    smp = 4
+                - 8vcpu:
+                    smp = 8
+                - 2vcpu_4vcpu:
+                    smp_vm1 = 2
+                    smp_vm2 = 4
+                - 2vcpu_8vcpu:
+                    smp_vm1 = 2
+                    smp_vm2 = 8
+                - 4vcpu_8vcpu:
+                    smp_vm1 = 4
+                    smp_vm2 = 8
+                - 1G:
+                    mem = 1024
+                - 2G:
+                    mem = 2048
+                - 1G_2G:
+                    mem_vm1 = 1024
+                    mem_vm2 = 2048
         - 4vm:
             vms = "vm1 vm2 vm3 vm4"
