--- a/KVM/qemu/td_huge_resource.cfg
+++ b/KVM/qemu/td_huge_resource.cfg
@@ -8,3 +8,13 @@
     vga = std
     auto_cpu_model = "no"
     cpu_model = host
+    variants:
+        - half:
+        - max_vcpus:
+            only q35
+            check_host_cpu = "yes"
+        - out_max_vcpus:
+            # TD can not boot up with vCPU number larger than host pCPU
+            only q35
+            overrange_host_cpu = "yes"
+            xfail = "yes"
