Add submodule: mce-test
Signed-off-by: Lai, Yi1 <yi1.lai@intel.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,6 @@
 	url = https://github.com/intel/idxd-config.git
 	active = true
 	branch = stable
+[submodule "BM/ras/mce-test"]
+	path = BM/ras/mce-test
+	url = https://github.com/laifryiee/mce-test.git
