KVM: entend tsc_freq 2 test cases to legacy VM
Signed-off-by: Xudong Hao <xudong.hao@intel.com>

--- a/KVM/qemu/tsc_freq.cfg
+++ b/KVM/qemu/tsc_freq.cfg
@@ -14,3 +14,8 @@
         - default:
         - settsc:
             cpu_model_flags = "tsc-frequency=3000000000"
+    variants:
+        - vm:
+        - tdvm:
+            machine_type_extra_params = "kernel-irqchip=split"
+            vm_secure_guest_type = tdx
