KVM: update td debug test cases name
Signed-off-by: Xudong Hao <xudong.hao@intel.com>

--- a/KVM/qemu/td_debug.cfg
+++ b/KVM/qemu/td_debug.cfg
@@ -10,12 +10,12 @@
     auto_cpu_model = "no"
     cpu_model = host
     variants:
+        - nmi:
+            nmi = "yes"
+        - default:
+            nmi = "no"
+    variants:
         - debugon:
             vm_secure_guest_object_options = debug=on
         - debugoff:
             vm_secure_guest_object_options = debug=off
-    variants:
-        - nmi:
-            nmi = "yes"
-        - nonmi:
-            nmi = "no"
