KVM: Add 4 UMIP test cases for TD and Non-TD VM
1 CPUID test
2 CPU flags tests
1 functionality test

Signed-off-by: Xudong Hao <xudong.hao@intel.com>

--- a/KVM/qemu/feature_test.cfg
+++ b/KVM/qemu/feature_test.cfg
@@ -10,6 +10,8 @@
     variants:
         - cmpccxadd:
             feature_dir_names = "cmpccxadd"
+        - umip:
+            feature_dir_names = "umip"
     variants:
         - vm:
         - tdvm:
