--- a/KVM/qemu/x86_cpu_flags.cfg
+++ b/KVM/qemu/x86_cpu_flags.cfg
@@ -4,16 +4,23 @@
     start_vm = no
     check_host_flags = yes
     only i386, x86_64
+    auto_cpu_model = "no"
+    cpu_model = host
     variants:
         - tsc_deadline:
-            auto_cpu_model = "no"
-            cpu_model = host
             flags = "tsc_deadline_timer"
             variants:
                 - default:
                 - disable:
                     cpu_model_flags = ",-tsc-deadline"
                     no_flags = "tsc_deadline_timer"
+        - umip:
+            flags = "umip"
+            variants:
+                - default:
+                - disable:
+                    cpu_model_flags = ",-umip"
+                    no_flags = "umip"
     variants:
         - vm:
             # Only No-TDVM supports soft reboot
