--- a/KVM/qemu/x86_cpuid.cfg
+++ b/KVM/qemu/x86_cpuid.cfg
@@ -38,6 +38,8 @@
             features = "AVX_NE_CONVERT"
         - cmpccxadd:
             features = "CMPCCXADD"
+        - umip:
+            features = "UMIP"
     variants:
         - vm:
         - tdvm:
