KVM: Update the TDX basic test case
Check host environment firstly, then try to boot TD.

Signed-off-by: Xudong Hao <xudong.hao@intel.com>

--- a/KVM/qemu/tdx_basic.cfg
+++ b/KVM/qemu/tdx_basic.cfg
@@ -7,8 +7,7 @@
     # Don't create/remove guest images
     force_create_image = no
     remove_image = no
-    # Automatically start VM
-    start_vm = yes
+    start_vm = no
     # Stop VM after testing
     kill_vm = yes
     shell_prompt = "^\[.*\][\#\$]\s*$"
