BM: Add CMake build support
1. This commit introduces CMakeLists.txt files across the BM and its subdirectories: amx/tmul avx512vbmi cet cmpccxadd pt splitlock telemetry th tools/cpuid_check tools/pcie umip xsave. Each CMakeLists.txt is configured to build the corresponding component of the project.
2. For amx/tmul and avx512vbmi, instruction set detection has been added to the CMakeLists.txt. If the target CPU does not support the corresponding instruction sets, the build will be skipped.
3. For features such as cet, umip, pt, etc., specific checks have also been added to the CMakeLists.txt. If necessary files or kernel modules are missing, the build will be skipped.
4. The installation process has been updated. You can now create a build directory within the BM directory, configure the project with CMake, compile it, and install it.
5. The CMakeLists.txt in the workload-xsave directory has been updated to ensure a consistent style.

Signed-off-by: Haoliang Zhu <haoliang.zhu@intel.com>

--- a/BM/workload-xsave/CMakeLists.txt
+++ b/BM/workload-xsave/CMakeLists.txt
@@ -7,16 +7,11 @@
 cmake_minimum_required(VERSION 3.12)
 project(Yogini)
 
-# Set the compiler
-set(CMAKE_C_COMPILER ${CROSS_COMPILE}gcc)
-
 # Set the build output directory
 set(BUILD_OUTPUT ${CMAKE_CURRENT_BINARY_DIR})
 
 # Set the installation prefix
-if(NOT CMAKE_INSTALL_PREFIX)
-    set(CMAKE_INSTALL_PREFIX /usr)
-endif()
+set(CMAKE_INSTALL_PREFIX /usr/local/bin)
 
 # Set the source files
 set(SRC
@@ -42,7 +37,7 @@ execute_process(
 )
 
 # Print information about the target CPU
-message(STATUS "Target CPU: ${TARGET_CPU}")
+# message(STATUS "Target CPU: ${TARGET_CPU}")
 
 # Function to check for CPU feature and add source files and compile definition if the feature is enabled
 function(check_cpu_feature)
@@ -92,4 +87,4 @@ add_executable(yogini ${SRC})
 target_link_libraries(yogini m pthread)
 
 # Install the program
-install(TARGETS yogini DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
+install(TARGETS yogini DESTINATION ${CMAKE_INSTALL_PREFIX})
