[amx] Enhance: CMakeLists.txt file path correction
Influenced by commit a8d9e3, correct file path to CMakeLists.txt.

Signed-off-by: Haoliang Zhu <2298000766@qq.com>

--- a/BM/CMakeLists.txt
+++ b/BM/CMakeLists.txt
@@ -6,7 +6,7 @@
 cmake_minimum_required(VERSION 3.12)
 project(lkvs)
 
-set(SUBFOLDER amx/tmul avx512vbmi cet cmpccxadd pt 
+set(SUBFOLDER amx avx512vbmi cet cmpccxadd pt 
               splitlock telemetry th tools/cpuid_check 
 	      tools/pcie umip workload-xsave xsave)
 
